10A charger infos and development stage badges added

--- a/_devices/2-1_bms-48v.md
+++ b/_devices/2-1_bms-48v.md
@@ -4,6 +4,8 @@ excerpt: "Flexible battery management system for 24-48V system voltage"
 permalink: /devices/bms-48v/
 ---
 
+![Development Stage](https://img.shields.io/badge/development%20stage-beta-orange.svg) Prototype built, development ongoing (major issues might still be open).
+
 Battery management system for up to 15 Li-ion cells based on bq76940 or bq76930 IC from Texas Instruments
 
 The Libre Solar BMS is divided into two different boards:
