Link to BMS 48V documentation at OSE added

--- a/_devices/2-1_bms-48v.md
+++ b/_devices/2-1_bms-48v.md
@@ -23,8 +23,7 @@ The Switch-N-Sense board acts as the interface between the Li-ion battery and th
 
 The two boards are separated in order to adjust the power part depending on your actual needs. If you only need to deliver low currents from the battery, the Switch-N-Sense board can be smaller and cheaper.
 
-This repository contains only the control board. Please see [the Switch-N-Sense repository](https://github.com/LibreSolar/Switch-N-Sense) for details on the power part of the BMS including hardware files.
-
+Please find a good description about system integration of the BMS in the [Open Source Ecology Wiki](https://wiki.opensourceecology.de/24-48V_BMS) (in German).
 
 ## Features
 
