New device type naming conventions added

--- a/_devices/1-1_mppt-2420-lc.md
+++ b/_devices/1-1_mppt-2420-lc.md
@@ -1,7 +1,7 @@
 ---
 title: "MPPT charger (20A)"
 excerpt: "Flexible battery charge controller for solar panels or bicycle generators."
-permalink: /devices/mppt-charger-20a/
+permalink: /devices/mppt-2420-lc/
 ---
 
 ![Development Stage](https://img.shields.io/badge/development%20stage-beta-orange.svg) Prototype built, development ongoing (major issues might still be open).
@@ -56,4 +56,4 @@ If you want to know the core specifications...
 
 The charge controller is under active development and you are welcome to participate.
 
-Visit the [GitHub page](https://github.com/LibreSolar/MPPT-Charger_20A "20A MPPT Solar Charge Controller") for schematics and board layout.
+Visit the [GitHub page](https://github.com/LibreSolar/MPPT-2420-LC "20A MPPT Solar Charge Controller") for schematics and board layout.
