--- a/_devices/2-1_bms-15s80-sc.md
+++ b/_devices/2-1_bms-15s80-sc.md
@@ -1,7 +1,7 @@
 ---
-title: "48V Battery Management System"
+title: "24V/48V Battery Management System"
 excerpt: "Flexible battery management system for 24-48V system voltage"
-permalink: /devices/bms-48v/
+permalink: /devices/bms-15s80-sc
 ---
 
 ![Development Stage](https://img.shields.io/badge/development%20stage-beta-orange.svg) Prototype built, development ongoing (major issues might still be open).
@@ -41,5 +41,5 @@ Please find a good description about system integration of the BMS in the [Open 
 
 The BMS is under active development and you are welcome to participate.
 
-Visit the [GitHub page](https://github.com/LibreSolar/BMS48V "48V Battery Management System") for schematics and board layout.
+Visit the [GitHub page](https://github.com/LibreSolar/BMS-15S80-SC "12V/48V Battery Management System") for schematics and board layout.
 
