--- a/_devices/1-3_pwm-2420-lus.md
+++ b/_devices/1-3_pwm-2420-lus.md
@@ -1,10 +1,10 @@
 ---
-title: "PWM charger (20A)"
+title: "PWM charger (20A) with USB output"
 excerpt: "Flexible solar charge controller with integrated USB output."
-permalink: /devices/pwm-charger-20a/
+permalink: /devices/pwm-2420-lus/
 ---
 
-![Development Stage](https://img.shields.io/badge/development%20stage-beta-orange.svg) Prototype built, development ongoing (major issues might still be open).
+![Development Stage](https://img.shields.io/badge/development%20stage-release%20candidate-yellow.svg) Tested prototype, only minor issues left.
 
 This PWM charge controller is cheaper than the MPPT charge controllers, as it does not contain the internal powerful DC/DC converter necessary for MPPT. The lower production cost and easy manufacturing with larger SMD components makes it ideally suited for solar home systems (SHS) for rural electrification.
 
@@ -34,4 +34,4 @@ The design allows to use either SMD MOSFETs or TO220 THT MOSFETs, which can be e
 
 The charge controller is under active development and you are welcome to participate.
 
-Visit the [GitHub page](https://github.com/LibreSolar/PWM-Charger_20A "20A PWM Solar Charge Controller with USB output") for schematics, board layout and firmware.
+Visit the [GitHub page](https://github.com/LibreSolar/PWM-2420-LUS "20A PWM Solar Charge Controller with USB output") for schematics, board layout and firmware.
